--- a/react-dotnet-casestudy/src/components/Dashboard.css
+++ b/react-dotnet-casestudy/src/components/Dashboard.css
@@ -1,13 +1,34 @@
-.dash {
-  text-align: center;
-  width: 400px;
-
+.login-form {
   background-color: white;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  width: 350px;
+  height: 450px;
+  border: black 1px solid;
+  border-radius: 25px;
 }
 
-h2 {
-  color: aliceblue;
-}
 button {
-  background-color: white;
+  background-color: green;
+  color: white;
+  width: 120px;
+  border-radius: 20px;
+  margin-top: 10px;
+}
+
+label {
+  padding-bottom: 5px;
+}
+
+input {
+  padding-bottom: 5px;
+  margin-bottom: 15px;
+}
+
+p {
+  font-size: 18px;
+  font-weight: 100;
+  color: gray;
 }
