--- a/Client/src/components/featuredInfo/FeaturedInfo.css
+++ b/Client/src/components/featuredInfo/FeaturedInfo.css
@@ -1,14 +1,34 @@
 .featured {
+  width: 100%;
   display: flex;
-  border: 2px solid blue;
   justify-content: space-between;
-  align-items: center;
-  font-size: 18px;
-  font-weight: bold;
 }
 
 .featuredItem {
   flex: 1;
-  justify-content: center;
+  margin: 0px 20px;
+  padding: 30px;
+  border-radius: 10px;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+}
+
+.featuredTitle {
+  font-size: 20px;
+}
+
+.featuredStudentContainer,
+.featuredTeacherContainer,
+.featuredParentContainer {
+  margin: 10px 0px;
+  display: flex;
   align-items: center;
+}
+
+.featuredStudent,
+.featuredTeacher,
+.featuredParent {
+  font-size: 30px;
+  font-weight: 600;
 }
